[workspace]
members = [
    "leetcode-102",
    "leetcode-103", "leetcode-104",
    "leetcode-114", "leetcode-207",
    "leetcode-215",
    "leetcode-228",
    "leetcode-230",
    "leetcode-235",
    "leetcode-236",
    "leetcode-27",
    "leetcode-287",
    "leetcode-724",
]
resolver = "3"

[workspace.dependencies]
rand = "0.8"
regex = "1"
itertools = "0.14"

[workspace.package]
rust-version = "1.85.0"

[profile.test]
opt-level = 2
